<resources>
    <string name="app_name">ananse pay</string>
    <string name="action_profile">Profile</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_exchange_rates">Exchange Rates</string>
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="action_settings">Settings</string>
    <string name="action_top_up">Top Up</string>
    <string name="action_withdraw">Withdraw</string>
    <string name="action_transfer">Transfer</string>
    <string name="action_request_transaction">Request Transaction</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="mobile_number_prompt">Mobile No, with international code</string>
    <string name="button_provision">Provision</string>
    <string name="button_resend">Resend</string>
    <string name="error_problem_provisioning">A problem was encountered. Please check your connection and try again.</string>
    <string name="error_confirmation_code">Incorrect code, please check and try again or request another code.</string>
    <string name="hint_enter_confirmation_code">6 digit confirmation code</string>
    <string name="cny">CNY</string>
    <string name="btc">BTC</string>
    <string name="cny_colon">CNY:\u00A5</string>
    <string name="btc_colon">BTC:\u0243</string>
    <string name="account_balance">Account Balance</string>
    <string name="amount">Amount</string>
    <string name="btc_transfer_text">BTC Top-Ups should be sent to the address below.\nTap to copy</string>
    <string name="pref_category_security">Security</string>
    <string name="pref_key_screen_lock_timeout">prefKeyScreenLockTimeout</string>
    <!--<string name="pref_summary_authorised_btc_address">This address will be able to Top-Up and Withdraw from your VPay Bitcoin Balance</string>-->
    <!--<string name="pref_title_authorised_btc_address">Authorised Bitcoin Address</string>-->
    <string name="error_problem_topup">A problem was encountered topping up.</string>
    <string name="topup_success_snack">Successful Topup</string>
    <string name="topup_failure_snack">Failed Topup please check and retry</string>
    <string name="no_transactions_available">Your transactions will appear here.</string>
    <string name="please_set_screen_lock">Please set a screenlock to protect your funds.</string>
    <string name="send_bitcoin_instruction">Send your Bitcoin to the address below\nTap to copy to clipboard</string>
    <string name="transaction_history">Transaction History</string>
    <string name="pref_change_passcode">Change Passcode</string>
    <string name="pref_screen_lock_timeout">Screen Lock Timeout</string>
    <string name="pref_fingerprint_unlock">Fingerprint Unlock</string>
    <string name="pref_title_passcode_timeout">Automatically Lock</string>
    <string name="never">Never</string>
    <string name="recipient_address">Recipient ananse pay Address</string>
    <string name="label">Label</string>
    <string name="Name">Name</string>
    <string name="note">Note</string>
    <string name="transfer_request_submitted">Transfer Request Submitted</string>
    <string name="error_submitting_transaction">Transaction submission failed</string>
    <string name="tap_to_copy">Tap to copy to the clipboard</string>
    <string name="vpay_wallet_address">ananse pay Address</string>
    <string name="bank">Bank</string>
    <string name="account_number">Account Number</string>
    <string name="account_holder">Account Holder</string>
    <string name="withdrawal_address">Withdrawal Address</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="btc_account">BTC Account</string>
    <string name="request_submitted">Request Submitted</string>
    <string name="topup">Topup</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="header_currency">CURRENCY</string>
    <string name="mbtc">mBTC</string>
    <string name="save_contact">Save Contact</string>
    <string name="action_add_contact">Add Contact"</string>
    <string name="transfer_and_save">Transfer and Save</string>
    <string name="invalid_barcode">Invalid ananse pay Barcode</string>
    <string name="cancelled">Cancelled</string>
    <string name="action_share">Share</string>
    <string name="send_to">Send To</string>
    <string name="backup_code_warning"><strong>CAUTION</strong>\n\nThis backup code gives access to your ananse pay account.\nAnybody with the key will be bale to access and transfer funds in the account and log in with other devices.\nKeep it safe and do not share.\nIf you lose your phone you can regain access to your account and funds and re-provision on a new device with this code. Anybody who has access to the code can also do this!\n\nSave the code somewhere safe and secure.</string>
    <string name="topup_copied_to_clipboard">Top-Up Address copied to clipboard</string>
    <string name="backup_code_copied_to_clipboard">Backup code copied to clipboard</string>
    <string name="restore_warning"><strong>CAUTION</strong>\n\nRestoring will wipe previous VPay data from this device.\nAny balances you have in VPay will only be available to you if you have the correct backup key OR are also logged in on another device (which we do not recommend for security reasons).</string>
    <string name="restore_code">Enter the Restore Code Here or Scan</string>
    <string name="invalid_code">Invalid Backup Code</string>
    <string name="Restoring">Restoring</string>
    <string name="secondary_restore_warning"><strong>THIS WILL WIPE CURRENT DETAILS AND RESTORE FROM THE CODE!\n\nFOLLOWING THE RESTORE ananse pay WILL QUIT AND YOU WILL NEED TO LAUNCH IT AGAIN.</strong></string>
    <string name="restore_error">Error restoring. Please check backup code and try again.</string>
    <string name="forgot_pincode_message">Forgot your Pincode?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_code_wipe_warning">CAUTION!\n\nIf you have forgotten your code tapping OK will wipe all account details from this device!\n\nYou will only be able to recover any funds if you have the backup code for the account!!\n\nCAUTION!</string>
    <string name="pin_code_forgot_text">Forgot?</string>
    <string name="pin_code_step_disable">Disable %d-digit Pincode</string>
    <string name="pin_code_step_create">Create a %d-digit Pincode</string>
    <string name="pin_code_step_change">Enter your current %d-digit Pincode</string>
    <string name="pin_code_step_unlock">Enter your %d-digit Pincode</string>
    <string name="pin_code_step_enable_confirm">Confirm your %d-digit Pincode</string>
    <string name="pin_code_fingerprint_text">Fingerprint</string>
    <string name="pin_code_fingerprint_success">Fingerprint recognized</string>
    <string name="pin_code_fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="set_passcode">Set Passcode</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="invalid_vpay_address">Invalid ananse pay Address</string>
    <string name="verify_number">Insert your number</string>
    <string name="insert_confirmation_code">Insert The Confirmation Code</string>
    <string name="disable_passcode">Disable Passcode</string>
    <string name="unvalidated_topup">Unvalidated Topup</string>
    <string name="unvalidated_credit">Unvalidated Credit</string>
    <string name="unvalidated_debit">Unvalidated Debit</string>
    <string name="unvalidated_withdrawal">Unvalidated Withdrawal</string>
</resources>
