<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="package im.ananse.payments.MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:enabled="false"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        android:icon="@drawable/qrcode_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_autorenew_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_face_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="100"
        android:title="@string/action_contacts"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_exchange_rates"
        android:orderInCategory="100"
        android:title="@string/action_exchange_rates"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        android:enabled="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore"
        android:orderInCategory="100"
        android:title="@string/action_restore"
        android:enabled="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
