<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.vpay365.payments.TransferFragment">

    <RadioGroup
        android:id="@+id/currencyRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/radio_btc">

        <RadioButton android:id="@+id/radio_cny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cny"
            android:enabled="false"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_btc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btc"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <ImageView
        android:id="@+id/barcodeImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/amountEditTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        app:met_floatingLabel="normal"
        app:layout_constraintTop_toBottomOf="@id/barcodeImageView" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_share"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:enabled="false"
        android:background="@drawable/vpay_state_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>