<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.vpay365.payments.ProvisioningActivity">

    <TextView
        android:id="@+id/restore_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restore_warning"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/restoreCodeField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/restore_code"
        app:met_floatingLabel="normal"
        android:inputType="textNoSuggestions"
        app:layout_constraintTop_toBottomOf="@id/restore_warning" />

    <Button
        android:id="@+id/restoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_restore"
        android:background="@drawable/vpay_state_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
