<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey_color"
    android:padding="@dimen/margin"
    tools:context="com.vpay365.payments.ProvisioningFragment"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verify_number_textView"
        android:text="@string/verify_number"
        android:textColor="@color/gold_vpay"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="@dimen/top_text_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/phoneField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number_prompt"
        android:backgroundTint="@color/light_gray_vpay"
        app:met_textColor="@android:color/white"
        app:met_textColorHint="@color/light_gray_vpay"
        app:met_floatingLabel="normal"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonProvision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/vpay_state_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button_provision"
        android:textColor="@color/light_gray_vpay"/>

</android.support.constraint.ConstraintLayout>
