<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="6dp"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context="com.vpay365.payments.AccountBalanceFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/label_account_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_balance"
        android:textColor="@color/gold_vpay"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/label_cny"
        app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
        android:id="@+id/label_cny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cny_colon"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/label_account_balance"
        app:layout_constraintBottom_toTopOf="@id/label_btc"/>

    <TextView
        android:id="@+id/label_btc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btc_colon"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/label_cny"
        app:layout_constraintBottom_toBottomOf="@id/barcodeImageView" />

    <TextView
        android:id="@+id/balance_cny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/label_cny"
        app:layout_constraintBottom_toBottomOf="@id/label_cny" />

    <TextView
        android:id="@+id/balance_btc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/label_btc"
        app:layout_constraintBottom_toBottomOf="@id/label_btc" />

    <ImageView
        android:id="@+id/barcodeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>
